force-app/main/default/objects/Capacity_Rule_Template__c/Capacity_Rule_Template__c.object-meta.xml
<CustomObject>
    <label>Capacity Rule Template</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Capacity Rule Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capacity Rule Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>