force-app/main/default/objects/Capacity_Rule_Template__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work_Type_Category__c</fullName>
                <label>Work Type Category</label>
            </value>
            <value>
                <fullName>FSL__GanttLabel__c</fullName>
                <isActive>false</isActive>
                <label>FSL__GanttLabel__c</label>
            </value>
            <value>
                <fullName>FSL__InJeopardyReason__c</fullName>
                <isActive>false</isActive>
                <label>FSL__InJeopardyReason__c</label>
            </value>
            <value>
                <fullName>Priority</fullName>
                <isActive>false</isActive>
                <label>Priority</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>