force-app/main/default/objects/Capacity_Rule_Template__c/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <label>Max %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>