force-app/main/default/objects/Capacity_Rule_Template__c/fields/Max_Rule__c.field-meta.xml
<CustomField>
    <fullName>Max_Rule__c</fullName>
    <label>Max % (Rule)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>