force-app/main/default/objects/Capacity_Rule_Template__c/fields/Parent_Capacity_Rule_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Capacity_Rule_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Capacity Rule Template</label>
    <referenceTo>Capacity_Rule_Template__c</referenceTo>
    <relationshipLabel>Capacity Rule Templates</relationshipLabel>
    <relationshipName>Capacity_Rule_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>