force-app/main/default/objects/Capacity_Rule_Template__c/fields/Release_After_X_Days__c.field-meta.xml
<CustomField>
    <fullName>Release_After_X_Days__c</fullName>
    <label>Release After X Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>