force-app/main/default/objects/Capacity_Rule_Template__c/fields/Release_X_Hours_Before__c.field-meta.xml
<CustomField>
    <fullName>Release_X_Hours_Before__c</fullName>
    <label>Release X Hours Before</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>