force-app/main/default/objects/Capacity_Rule_Template__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Capacity Rule Templates</relationshipLabel>
    <relationshipName>Capacity_Rule_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>