force-app/main/default/objects/Capacity_Rule_Template__c/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <label>Test Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Test_Object__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Capacity_Field</valueSetName>
    </valueSet>
</CustomField>