force-app/main/default/objects/Capacity_Rule_Template__c/fields/Test_Object__c.field-meta.xml
<CustomField>
    <fullName>Test_Object__c</fullName>
    <label>Test Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Capacity_Object</valueSetName>
    </valueSet>
</CustomField>