force-app/main/default/objects/Capacity_Rule_Template__c/fields/Test_Value__c.field-meta.xml
<CustomField>
    <fullName>Test_Value__c</fullName>
    <label>Test Value</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Test_Field__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Capacity_Field_Value</valueSetName>
    </valueSet>
</CustomField>