force-app/main/default/objects/Capacity_Rule_Template__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Work Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Field__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency FFS</fullName>
            </value>
            <value>
                <fullName>Emergency MC</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Part Installs</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Repair FFS</fullName>
            </value>
            <value>
                <fullName>Repair MC</fullName>
            </value>
            <value>
                <fullName>TuneUpAC</fullName>
            </value>
            <value>
                <fullName>TuneUpHeat</fullName>
            </value>
            <value>
                <fullName>TuneUpHeat FFS</fullName>
            </value>
            <value>
                <fullName>TuneUpsAC FFS</fullName>
            </value>
            <value>
                <fullName>Delayed Finish</fullName>
                <isActive>false</isActive>
                <label>Delayed Finish</label>
            </value>
            <value>
                <fullName>Delayed Start</fullName>
                <isActive>false</isActive>
                <label>Delayed Start</label>
            </value>
            <value>
                <fullName>Due Date Approaching</fullName>
                <isActive>false</isActive>
                <label>Due Date Approaching</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <isActive>false</isActive>
                <label>Low</label>
            </value>
            <value>
                <fullName>No Response</fullName>
                <isActive>false</isActive>
                <label>No Response</label>
            </value>
            <value>
                <fullName>Repair</fullName>
                <isActive>false</isActive>
                <label>Repair</label>
            </value>
            <value>
                <fullName>VIP Work</fullName>
                <isActive>false</isActive>
                <label>VIP Work</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>