force-app/main/default/objects/Capacity_Rule_Template__c/recordTypes/Daily_Capacity_Template.recordType-meta.xml
<RecordType>
    <fullName>Daily_Capacity_Template</fullName>
    <active>true</active>
    <description>Create a Daily Capacity Template record</description>
    <label>Daily Capacity</label>
</RecordType>