force-app/main/default/objects/Capacity_Rule_Template__c/recordTypes/Rule_Template.recordType-meta.xml
<RecordType>
    <fullName>Rule_Template</fullName>
    <active>true</active>
    <description>Create a Rule Based Capacity Template record</description>
    <label>Rule Based Capacity</label>
</RecordType>