force-app/main/default/objects/Capacity_Rule_Template__c/listViews/Daily_Capacity.listView-meta.xml
<ListView>
    <fullName>Daily_Capacity</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Day_of_Week__c</columns>
    <columns>Slots__c</columns>
    <columns>Max__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Capacity_Rule_Template__c.Daily_Capacity_Template</value>
    </filters>
    <label>Daily Capacity</label>
</ListView>