force-app/main/default/objects/Capacity_Rule_Template__c/listViews/Rule_Based_Capacity.listView-meta.xml
<ListView>
    <fullName>Rule_Based_Capacity</fullName>
    <columns>NAME</columns>
    <columns>Parent_Capacity_Rule_Template__c</columns>
    <columns>Type__c</columns>
    <columns>Active__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Day_of_Week__c</columns>
    <columns>Value__c</columns>
    <columns>Slots__c</columns>
    <columns>Max_Rule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Capacity_Rule_Template__c.Rule_Template</value>
    </filters>
    <label>Rule Based Capacity</label>
</ListView>